k8s/02-services.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: massive-uploader
spec:
  selector:
    app: backend
  ports:
    - port: 33003
